@@ -1,0 +1,118 @@
+# frozen_string_literal: true
+
+require 'spec_helper'
+require 'sucker_punch'
+
+module ElasticAPM
+  RSpec.describe 'Spy: SuckerPunch', :intercept do
+    class TestJob
+      include ::SuckerPunch::Job
+      def perform; end
+    end
+
+    class ErrorJob
+      include ::SuckerPunch::Job
+      def perform
+        1 / 0
+      end
+    end
+
+    context 'when SuckerPunch::Job.new.perform is called' do
+      before do
+        with_agent do
+          TestJob.new.perform
+        end
+      end
+
+      it 'does not create a transaction' do
+        expect(@intercepted.transactions.size).to eq 0
+      end
+    end
+
+    context 'when the job is successful' do
+      context 'when SuckerPunch::Job.perform_async is called' do
+        before do
+          with_agent do
+            TestJob.perform_async
+            sleep(0.5)
+          end
+        end
+
+        it 'creates a transaction' do
+          expect(@intercepted.transactions.size).to eq 1
+          transaction, = @intercepted.transactions
+          expect(transaction.name).to eq 'ElasticAPM::TestJob'
+          expect(transaction.type).to eq 'sucker_punch'
+          expect(transaction.result).to eq 'success'
+        end
+      end
+
+      context 'when SuckerPunch::Job.perform_in is called' do
+        before do
+          with_agent do
+            TestJob.perform_in(0.5)
+            sleep(1)
+          end
+        end
+
+        it 'creates a transaction' do
+          expect(@intercepted.transactions.size).to eq 1
+          transaction, = @intercepted.transactions
+          expect(transaction.name).to eq 'ElasticAPM::TestJob'
+          expect(transaction.type).to eq 'sucker_punch'
+          expect(transaction.result).to eq 'success'
+        end
+      end
+    end
+
+    context 'when the job raises an error' do
+      around do |ex|
+        original_exception_handler = SuckerPunch.exception_handler
+        # We set an exception handler that does nothing so we don't see the
+        # error reported to STDOUT in the tests
+        SuckerPunch.exception_handler = proc {}
+        ex.run
+        SuckerPunch.exception_handler = original_exception_handler
+        SuckerPunch::Counter::Failed::COUNTER.clear
+      end
+
+      context 'when SuckerPunch::Job.perform_async is called' do
+        it 'sets transaction result to success, SuckerPunch handles error' do
+          with_agent do
+            ErrorJob.perform_async
+            sleep(0.5)
+          end
+
+          expect(
+            SuckerPunch::Counter::Failed::COUNTER['ElasticAPM::ErrorJob'].value
+          ). to eq 1
+
+          transaction, = @intercepted.transactions
+          expect(transaction.name).to eq 'ElasticAPM::ErrorJob'
+          expect(transaction.type).to eq 'sucker_punch'
+          expect(transaction.result).to eq 'success'
+          expect(@intercepted.errors.size).to eq 0
+        end
+      end
+
+      context 'when SuckerPunch::Job.perform_in is called' do
+        it 'sets transaction result to success, SuckerPunch handles error' do
+          with_agent do
+            ErrorJob.perform_in(0.5)
+            sleep(1)
+          end
+
+          expect(
+            SuckerPunch::Counter::Failed::COUNTER['ElasticAPM::ErrorJob'].value
+          ). to eq 1
+
+          transaction, = @intercepted.transactions
+          expect(transaction.name).to eq 'ElasticAPM::ErrorJob'
+          expect(transaction.type).to eq 'sucker_punch'
+          expect(transaction.result).to eq 'success'
+          expect(@intercepted.errors.size).to eq 0
+        end
+      end
+    end
+  end
+end
